Changes in @NEW@:
  o New Features
    * A modified version of the Python gzip library has been added to
      Conary. The new version has been tested to be 3% faster than the
      standard library version for a small sized update. It also does
      not seek within the compressed data, which will enable streaming
      decompression for future uses. (CNY-3301)

Changes in 2.1.0:
  o New Features
    * Conary now allows packages to be installed using foreign package
      managers via wrapped content called capsules. RPM capsule support
      is included in this release. (CNY-3217, CNY-3213)
    * Added ignoreDependencies configuration option, which allows users
      to specify certain dependency classes which should be ignored
      during installs. The default is "abi rpmlib".
    * The xz compression file format is now supported for decompressing
      sources. (CNY-3207)
    * The changemail.py repository commit action module now takes an
      optional --maxsize argument and truncates changemail messages
      to fit. (CNY-3205)
    * The Run build action now does path-based build requirement
      discovery like most build actions. (CNY-3222)
    * Conary now allows identical files to be shared during installs
      and updates. Both troves own the shared files, and they must be
      updated at the same time when the shared files change.
    * Conary now honors the no_proxy environment variable to allow
      direct connections to specific hosts and domains. (CNY-3246)
    * Added excludeCapsuleContents config option for servers.
    * Added ChangeSet.removeCommitted() to filter already-committed
      troves from a changeset.
    * The bootstrap python module dependency discovery proxy now
      provides additional useful informational messages to aid
      debugging.
    * Conary proxies are responsible for reassembling the content for
      changesets containing capsules. (CNY-3228, CNY-3259)