@@ -310,6 +310,40 @@ class RemoveCommand(ConaryCommand):
         log.syslog.commandComplete()
 _register(RemoveCommand)
 
+class RepairCommand(ConaryCommand):
+    commands = ['repair']
+    paramHelp = "<pkgname>[=<version>][[flavor]]*"
+    help = ('Undo local changes to files owned by troves (EXPERIMENTAL)')
+    commandGroup = 'System Modification'
+    hidden = True
+    ignoreConfigErrors = True
+
+    def runCommand(self, cfg, argSet, otherArgs):
+        if len(otherArgs) < 3: return self.usage()
+        if argSet: return self.usage()
+
+        client = conaryclient.ConaryClient(cfg)
+        db = client.db
+        log.syslog.command()
+
+        troveList = []
+        for item in otherArgs[2:]:
+            name, ver, flv = updatecmd.parseTroveSpec(item)
+            troves = client.db.findTrove(None, (name, ver, flv))
+            troveList += troves
+
+        try:
+            db.repairTroves(client.getRepos(), troveList)
+        except conary.errors.DatabaseError, e:
+            log.error(str(e))
+            return 1
+        except OSError, e:
+            log.error("cannot remove %s: %s" % (fullPath, e.strerror))
+            return 1
+
+        log.syslog.commandComplete()
+_register(RepairCommand)
+
 class RestoreCommand(ConaryCommand):
     commands = ['restore']
     paramHelp = "<pkgname>[=<version>][[flavor]]*"
